unpackaged/objects/Complaint_Message__c.object
<CustomObject>
    <fields>
        <fullName>CC_Addresses__c</fullName>
        <label>CC Addresses</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint</label>
        <referenceTo>Complaints__c</referenceTo>
        <relationshipLabel>Complaint Messages</relationshipLabel>
        <relationshipName>Complaint_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EmailMessageId__c</fullName>
        <label>EmailMessageId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Addresses__c</fullName>
        <label>To Addresses</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Complaint Message</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Complaint Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>